[gd_scene load_steps=2 format=3 uid="uid://crxx0ka80svv1"]

[ext_resource type="Script" path="res://menu.gd" id="1_w1f1x"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_w1f1x")
host_setup_scene = "res://scenes/hosting_setup.tscn"
game_scene = "res://scenes/game.tscn"
lobby_scene = "res://scenes/lobby.tscn"
match_scene = "res://scenes/match.tscn"
main_scene = "res://main.tscn"
options_scene = "res://options_menu.tscn"

[node name="Board" type="Node" parent="."]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://main.tscn")
spawn_path = NodePath("../Board")

[node name="Choices" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -68.0
offset_right = 55.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="NetworkButton" type="Button" parent="Choices"]
layout_mode = 2
toggle_mode = true
text = "üåéNetwork..."

[node name="LobbyButton" type="Button" parent="Choices"]
layout_mode = 2
text = "üë•Host Lobby"

[node name="NameEntry" type="LineEdit" parent="Choices"]
layout_mode = 2
placeholder_text = "player name"
alignment = 1

[node name="ConnectionChoices" type="HBoxContainer" parent="Choices"]
layout_mode = 2

[node name="Host" type="Button" parent="Choices/ConnectionChoices"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "‚ö°Host"

[node name="Join" type="Button" parent="Choices/ConnectionChoices"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "üîóJoin"

[node name="HotseatButton" type="Button" parent="Choices"]
layout_mode = 2
text = "üñ•Ô∏èHotseat"

[node name="OptionsButton" type="Button" parent="Choices"]
layout_mode = 2
text = "üéõÔ∏èOptions
"

[node name="QuitButton" type="Button" parent="Choices"]
layout_mode = 2
text = "‚ùåQuit"

[connection signal="toggled" from="Choices/NetworkButton" to="." method="_on_network_button_toggled"]
[connection signal="pressed" from="Choices/LobbyButton" to="." method="_on_lobby_button_pressed"]
[connection signal="focus_exited" from="Choices/NameEntry" to="." method="_on_name_entry_focus_exited"]
[connection signal="text_changed" from="Choices/NameEntry" to="." method="_on_name_entry_text_changed"]
[connection signal="pressed" from="Choices/ConnectionChoices/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Choices/ConnectionChoices/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Choices/HotseatButton" to="." method="_on_hotseat_pressed"]
[connection signal="pressed" from="Choices/OptionsButton" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Choices/QuitButton" to="." method="_on_quit_pressed"]
